<resources>

    <string name="continuar">Continuar</string>
    <string name="usuario">Usuario</string>
    <string name="bienvenido">¡Bienvenido!</string>





    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="descripcion">Esta app se especializa en recolectar datos sobre el juego conocido llamado Genshin Impact y ayudar a los jugadores a resolver distintos puzles</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!-- Botones -->
    <string name="app_name">ISOTA</string>
    <string name="iniciar">Iniciar sesión</string>

    <string name="contacto">Contacto</string>
    <string name="creditos">Creditos</string>
    <string name="salir">Salir</string>
    <string name="lista">Lista</string>
    <string name="favoritos">Favoritos</string>
    <string name="usuarioinfo">Usuario Info</string>

    <string name="contacta">Contacto</string>

    <!-- Item -->
    <string name="personaje">Personaje:</string>
    <string name="elemento">Elemento:</string>
    <string name="arma">Arma:</string>

</resources>