<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Otros elementos de tu layout -->

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="16dp" />

        <Button
            android:id="@+id/creditsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creditos"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onCreditsClicked()}" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onLogoutClicked()}" />

        <Button
            android:id="@+id/lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lista"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onLogoutClicked()}" />

        <Button
            android:id="@+id/listafav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favoritos"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onLogoutClicked()}" />

        <Button
            android:id="@+id/usu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuarioinfo"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onLogoutClicked()}" />

    </LinearLayout>


</FrameLayout>
