<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ItemListFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivEquipo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_golden"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="202dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/personaje"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvEquipoName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@id/ivEquipo"
        app:layout_constraintTop_toTopOf="@id/ivEquipo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvEquipoName"
        android:layout_width="203dp"
        android:layout_height="17dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Hu Tao" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="203dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/elemento"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvEquipoLiga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@id/tvEquipoName"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvEquipoLiga"
        android:layout_width="206dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        tools:text="Pyro" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="206dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/arma"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvEquipoEstadio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@id/tvEquipoLiga"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvEquipoEstadio"
        android:layout_width="206dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@id/ivEquipo"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        tools:text="Lanza" />

    <ImageButton
        android:id="@+id/btnAction"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/no"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/ivEquipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivEquipo" />

</androidx.constraintlayout.widget.ConstraintLayout>